helloService/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 2000
        name: http
        protocol: HTTP
      hosts:
        - "*" # allow traffic for all hosts
#      tls: #TLS settings
#        mode: SIMPLE
#        serverCertificate: /tmp/tls.crt
#        privateKey: /tmp/tls.key
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello
spec:
  hosts:
    - "*"
  gateways:
    - hello-gateway # <---- bind to gateway
  http:
    - match:
        - uri:
            prefix: /
        - uri:
            prefix: /hello
      route:
        - destination:
            port:
              number: 3000
            host: "*"
            subset: v4
