helloService/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello
spec:
  hosts:
    - "*"
  gateways:
    - hello-gateway # <---- bind to gateway
  http:
    - match:
        - uri:
            prefix: /hello
      route:
        - destination:
            port:
              number: 3000
            host: hello
            subset: v4
